--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -59,8 +59,9 @@ code {
 p {
 	font-family: $body-font-family;
 	font-weight: $font-weight-normal;
-	@include adjust-font-size-to(13px);
+	@include adjust-font-size-to($paragraph-font-size);
 	color: $text-color;
+	margin-bottom: $row-height;
 }
 a {
 	font-family: $body-font-family;
@@ -77,4 +78,61 @@ em {
 
 .text-complementar {
 	color: $main-color-complementar;
+}
+
+ol, ul{
+	padding: 0;
+	margin-bottom: $row-height*3;
+	li {
+		@include adjust-font-size-to($paragraph-font-size*1.3);
+		margin-bottom: $row-height;
+		color: $text-color;
+	}
+	ol,ul {
+		margin: 0 0 0 $row-height;
+	}
+}
+ol {
+	list-style: decimal inside none;
+}
+ul {
+	list-style: bullet inside none;
+}
+/* Blockquotes 
+ * Inspired to:
+ * http://tympanus.net/codrops/2012/07/25/modern-block-quote-styles/
+ */ 
+blockquote {
+	margin: 0 0 $row-height 0;
+	padding: 0;
+	position: relative;
+	padding-top: 15px;
+	padding-left: 50px;
+	
+	&:after {
+		font-family: 'icons';
+		background: rgba($main-color,0.8);
+		width: 80px;
+		height: 80px;
+		border-radius: 50%;
+		content: '\275e'; 
+		position: absolute;
+		font-size: 70px;
+		line-height: 112px;
+		text-align: center;
+		top: 0px;
+		left: 3%;
+		margin-left: -65px;
+		color: rgba(255,255,255,0.5);
+		text-shadow: 0 1px 1px rgba(255,255,255,0.1);
+	}
+	p {
+		@include adjust-font-size-to($paragraph-font-size*1.4);
+		font-style: italic;
+		background: rgba(255,255,255,0.5);
+		display: inline;
+		color: rgba($main-color,0.8);
+		text-shadow: 0 1px 1px rgba(255,255,255,0.5);
+		line-height: 40px;
+	}
 }
