--- a/sass/_grid.scss
+++ b/sass/_grid.scss
@@ -1,38 +1,52 @@
 // Settings
 
-$total-columns  : 7;
+//this is the default number of columns
+$total-columns: 5;
+//width of each column
 $column-width   : 4em;
+//space between columns
 $gutter-width   : 1em;
-$grid-padding   : $gutter-width;
-$break          : 12;
+//space on the right and left of the grid
+$grid-padding   : $gutter-width/3;
+//alternative layout breakpoints
+$tablet: 8;
+$computer: 55em 12;
 
 // Container
+header.main {
+	display: block;
+	margin: 0 auto;
+}
 .container {
-  @include container($total-columns, $break);
+  @include container($total-columns, $tablet, $computer);
 }
 
-// Layout
-
-@include at-breakpoint($break) {
-  .banner { @include prefix(2,$break); }
-  .pagenav { @include span-columns(2,$break); }
-  .main {
-    $main-columns: 10;
-    @include span-columns($main-columns omega, $break);
-    .content { @include span-columns(7,$main-columns) }
-    .summary { @include span-columns(3 omega, $main-columns) }
+@include at-breakpoint($tablet){
+  .container{
+			
   }
+	.main_content {
+		@include span-columns(6);
+	}
+	.right_sidebar {
+		@include span-columns(2);
+	}
 }
 
-.contentinfo {
-  clear: both;
-  margin: 0 0 - $grid-padding;
-  padding: 0 $grid-padding;
-  @include at-breakpoint($break) {
-    margin: 0;
-    @include pad(2,3,$break);
+@include at-breakpoint($computer){
+  .container{
+			
   }
+	.main_content {
+		@include span-columns(8);
+	}
+	.right_sidebar {
+		@include span-columns(4 omega);
+	}
 }
+
+
+
 
 .float-left {
 	float: left;
